portal/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  namespace: default
  name: portal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 10%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: portal
        role: main
        tier: app
    spec:
      containers:
      - name: portal
        image: celsinhobueno/portal:60
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 10m
            memory: 125Mi
