portal/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: k8s-cluster-ingress-dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: portal-ingress-dev
  
spec:
  rules:
  - host: -dev
    http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: portal 
            port:
              name: http
